	oldpgmm

	* lag.pseries is now able to deal with vector arguments for lags,
	e.g. lag(x, c(1,3))
	
	* suml(x) is replaced by Reduce("+", x)


Changes since version 1.2-4

	* bug corrected in pgmm : ud <- cbind(ud, td.gmm.level) is
	relevant only for twoways models

	* in fitted.plm, the extraction of the index is updated

	* the residuals.plm method now has a model argument

	* a new function r.squared

	* pmodel.response.plm is modified : no explicit effect and model
	arguments anymore (like in model.matrix.plm)
	
Changes since version 1.2-5

	* fixed error in pggls, model="within" (FEGLS). Added model="fd" (FDGLS).  

	* changed dependency from kinship to bdsmatrix (as suggested by Terry Therneau after his reorganization of the packages). 

	* fixed DESCRIPTION and NAMESPACE accordingly. 

	* fixed the example in pggls.Rd


	
Changes since version 1.2-6

	* a bug in mtest for pgmm models with effect=individual and
	transformation=ld *and* for the wald test for time.dummies for
	model with effect = twoways and transformation=ld is fixed by
	modifying namest in gmm
	
	* there was a bug in pgmm for models with different lags for gmm
	instruments. The number of time-series lost is now the min (and
	not the max) of the first lags for gmm instruments

	* some parts of summmary.pgmm only worked correctly for model with
	time-dummies. It now deals correctly for model with 'individual'
	effects

	* the rda files are now compressed

	* p-values for the two-tailed versions of plmtest() were wrong and 		have been fixed. They were divided by 2 instead of multiplied.

	
 Changes since version 1.2-7
	
	* a typo is corrected in the man page of plm.data

	* AER is now suggested

Changes since version 1.2-8	

	* a index method is added for panelmodel, pdata.frame and pseries

	* a bug in the typology of the variables in pht is fixed

	* a bug in vcovBK (matrices degenerating into vectors) is fixed (thx David Hugh-Jones for bug report)