@@ -1,6 +1,6 @@
 Package: plm
 Version: 1.2-9
-Date: 2012-02-03
+Date: 2012-02-21
 Title: Linear Models for Panel Data
 Author: Yves Croissant <yves.croissant@univ-reunion.fr>, Giovanni Millo <Giovanni_Millo@Generali.com>
 Maintainer: Yves Croissant <yves.croissant@univ-reunion.fr>
